[package]
name = "dst-container-derive"
version = "0.1.1"
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com"]
categories = ["data-structures"]
description = "Containers for DST objects."
keywords = ["dst", "vec", "slice", "type"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Berrysoft/dst-container"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.2"
